KIK-694 Fixed drag and drop styling issues, since it had lines on Firefox on Windows.

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -3201,20 +3201,17 @@ th {
   }
 
   .stick {
-	.opener {
-  	  position: fixed;
-   	  top: 71px;
-      width: 221px;
-      height: 60px;
+    .opener {
+      position: fixed;
+      top: 71px;
       z-index: 1000;
-
       .number {
-      	top: 17px;
+        top: 17px;
       }
-	}
-	.slide {
-	  margin-top: 81px;
-	}
+    }
+    .slide {
+      margin-top: 81px;
+    }
   }
   .opener {
   	border-top: 20px solid #f1f1f1;
